--- a/shipdata-streaming/pom.xml
+++ b/shipdata-streaming/pom.xml
@@ -134,5 +134,18 @@
             <version>3.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mongodb.spark</groupId>
+            <artifactId>mongo-spark-connector_2.11</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>casbah_2.10</artifactId>
+            <version>3.1.1</version>
+        </dependency>
+
+
     </dependencies>
 </project>
